--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,9 @@ name = "pypi"
 tensorflow = "==2.8.2"
 
 [dev-packages]
-mlflow = "*"
-
-[requires]
-python_version = "3.9"
+mlflow = "1.28.0"
+isort = "5.10.1"
+black = "22.8.0"
+pytest = "7.1.3"
+pylint = "*"
+matplotlib = "*"
