--- a/Pipfile
+++ b/Pipfile
@@ -6,6 +6,8 @@ name = "pypi"
 [packages]
 tensorflow = "==2.8.2"
 importlib-resources = "*"
+boto3 = "*"
+tensorflow-directml-plugin = "*"
 
 [dev-packages]
 mlflow = "1.28.0"
@@ -14,3 +16,6 @@ black = "22.8.0"
 pytest = "7.1.3"
 pylint = "*"
 matplotlib = "*"
+jupyter = "*"
+ipykernel = "*"
+sklearn = "*"
