--- a/Pipfile
+++ b/Pipfile
@@ -5,16 +5,16 @@ name = "pypi"
 
 [packages]
 tensorflow = "==2.8.2"
-sklearn = "*"
 importlib-resources = "*"
 boto3 = "*"
 
 [dev-packages]
-mlflow = "1.28.0"
-isort = "5.10.1"
-black = "22.8.0"
-pytest = "7.1.3"
+mlflow = "*"
+isort = "*"
+black = "*"
+pytest = "*"
 pylint = "*"
 matplotlib = "*"
 jupyter = "*"
 ipykernel = "*"
+pre-commit = "*"
