--- a/Pipfile
+++ b/Pipfile
@@ -5,16 +5,16 @@ name = "pypi"
 
 [packages]
 tensorflow = "==2.8.2"
-importlib-resources = "*"
-boto3 = "*"
+importlib-resources = "5.9.0"
+boto3 = "1.24.70"
 
 [dev-packages]
-mlflow = "*"
-isort = "*"
-black = "*"
-pytest = "*"
-pylint = "*"
-matplotlib = "*"
-jupyter = "*"
-ipykernel = "*"
-pre-commit = "*"
+mlflow = "1.28.0"
+isort = "5.10.1"
+black = "22.8.0"
+pytest = "7.1.3"
+pylint = "2.15.2"
+matplotlib = "3.5.3"
+jupyter = "1.0.0"
+ipykernel = "6.15.2"
+pre-commit = "2.20.0"
