--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,6 @@ repos:
       language: system
       types: [python]
       args: [
-        "./app",
         "-rn", # Only display messages
         "-sn", # Don't display the score
         "--recursive=y"
@@ -40,5 +39,5 @@ repos:
       pass_filenames: false
       always_run: true
       args: [
-        "tests/test.py"
+        "tests/test_.py"
       ]
