--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 tensorflow = "==2.8.2"
 importlib-resources = "5.9.0"
 boto3 = "1.24.70"
+pillow = "9.2.0"
 
 [dev-packages]
 mlflow = "1.28.0"
