--- a/integration-test/model/conda.yaml
+++ b/integration-test/model/conda.yaml
@@ -1,12 +1,17 @@
 channels:
 - conda-forge
 dependencies:
-- python=3.9.7
-- pip<=22.1
+- python=3.8.10
+- pip<=22.2.2
 - pip:
   - mlflow
-  - cloudpickle==2.0.0
-  - psutil==5.8.0
-  - scikit-learn==1.0.2
-  - typing-extensions==3.10.0.2
+  - boto3==1.24.70
+  - cffi==1.15.1
+  - defusedxml==0.7.1
+  - dill==0.3.5.1
+  - keras==2.8.0
+  - pandas==1.4.4
+  - pillow==9.2.0
+  - scipy==1.9.1
+  - tensorflow==2.8.2
 name: mlflow-env
